Add in functionality, (e.g. 1 in [1, 2, 3]) (#2)
* WIP

* Add `in` functionality, e.g. 1 in [1, 2, 3]

* fix typo

--- a/tests/templates/comparisons.jinja
+++ b/tests/templates/comparisons.jinja
@@ -37,3 +37,23 @@
 {% if letter_a == letter_b %}
     the two letters are the same
 {% endif %}
+
+{% if number_1 in list_a %}
+    number 1 is in list a
+{% endif %}
+
+{% if letter_a not in list_a %}
+    letter a is not in list a
+{% endif %}
+
+{% if letter_a not in list_a %}
+    letter a is not in list a
+{% endif %}
+
+{% if dict_a in list_d %}
+    dict_a is in list d
+{% endif %}
+
+{% if 'one' in dict_a %}
+    key 'one' is in dict a
+{% endif %}
